[gd_scene load_steps=5 format=4 uid="uid://c3p4bhjcmww4j"]

[ext_resource type="TileSet" uid="uid://0ayermjqhq5t" path="res://test_world.tres" id="1_eljrm"]
[ext_resource type="PackedScene" uid="uid://kfwvnbxw7kch" path="res://Scenes/player.tscn" id="4_ca72k"]
[ext_resource type="Script" path="res://camera_holder.gd" id="5_jyary"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_isfhc"]
size = Vector2(400, 240)

[node name="main_map" type="Node2D"]

[node name="Map holder" type="Node2D" parent="."]
scale = Vector2(0.7, 0.7)

[node name="TileMapLayer" type="TileMapLayer" parent="Map holder"]
tile_map_data = PackedByteArray("AAD2/wEAAQAAAAAAAAD3/wEAAQAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAD//wUAAQAAAAAAAAD2/wYAAQAAAAAAAAD3/wYAAQAAAAAAAAD4/wYAAQAAAAAAAAD5/wYAAQAAAAAAAAD6/wYAAQAAAAAAAAD7/wYAAQAAAAAAAAD8/wYAAQAAAAAAAAD9/wYAAQAAAAAAAAD+/wYAAQAAAAAAAAD//wYAAQAAAAAAAAD2/wIAAQAAAAAAAAD2/wMAAQAAAAAAAAD2/wQAAQAAAAAAAAD2/wUAAQAAAAAAAAAAAAYAAQAAAAAAAAABAAYAAQAAAAAAAAACAAYAAQAAAAAAAAADAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAHAAYAAQAAAAAAAAAIAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAD3/wUAAQAAAAAAAAD4/wUAAQAAAAAAAAD5/wUAAQAAAAAAAAD6/wUAAQAAAAAAAAD7/wUAAQAAAAAAAAD8/wUAAQAAAAAAAAD9/wUAAQAAAAAAAAD+/wUAAQAAAAAAAAAAAAUAAQAAAAAAAAABAAUAAQAAAAAAAAACAAUAAQAAAAAAAAADAAUAAQAAAAAAAAAEAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAIAAUAAQAAAAAAAAD2//7/AQAAAAAAAAD2////AQAAAAAAAAD2/wAAAQAAAAAAAAD3////AQAAAAAAAAD3/wAAAQAAAAAAAAD3/wIAAQAAAAAAAAAJAP7/AQAAAAAAAAAJAP//AQAAAAAAAAAJAAAAAQAAAAAAAAAJAPX/AQAAAAAAAAAJAPb/AQAAAAAAAAAJAPf/AQAAAAAAAAAJAPj/AQAAAAAAAAAJAPn/AQAAAAAAAAAJAPr/AQAAAAAAAAAJAPv/AQAAAAAAAAAJAPz/AQAAAAAAAAAJAP3/AQAAAAAAAAD2//X/AQAAAAAAAAD2//b/AQAAAAAAAAD2//f/AQAAAAAAAAD2//j/AQAAAAAAAAD2//n/AQAAAAAAAAD2//r/AQAAAAAAAAD2//v/AQAAAAAAAAD2//z/AQAAAAAAAAD2//3/AQAAAAAAAAAIAPX/AQAAAAAAAAAIAPb/AQAAAAAAAAAIAPf/AQAAAAAAAAAIAPj/AQAAAAAAAAAIAPn/AQAAAAAAAAAIAPr/AQAAAAAAAAAIAPv/AQAAAAAAAAAIAPz/AQAAAAAAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAAAAAAIAP//AQAAAAAAAAAIAAAAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAD3//X/AQAAAAAAAAD3//b/AQAAAAAAAAD3//f/AQAAAAAAAAD3//j/AQAAAAAAAAD3//n/AQAAAAAAAAD3//r/AQAAAAAAAAD3//v/AQAAAAAAAAD3//z/AQAAAAAAAAD3//3/AQAAAAAAAAD3//7/AQAAAAAAAAD3/wMAAQAAAAAAAAD3/wQAAQAAAAAAAAD4/wQAAQAAAAAAAAD6/wQAAQABAAAAAAD7/wQAAQABAAAAAAD8/wQAAQABAAAAAAD9/wQAAQABAAAAAAD+/wQAAQABAAAAAAD//wQAAQABAAAAAAAAAAQAAQABAAAAAAABAAQAAQABAAAAAAACAAQAAQAAAAAAAAADAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAKAPn/AQAAAAAAAAAKAPr/AQAAAAAAAAAKAPv/AQAAAAAAAAAKAPz/AQAAAAAAAAAKAP3/AQAAAAAAAAAKAP7/AQAAAAAAAAAKAP//AQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAPX/AQAAAAAAAAAKAPb/AQAAAAAAAAAKAPf/AQAAAAAAAAAKAPj/AQAAAAAAAAAIAO//AQAAAAAAAAAIAPD/AQAAAAAAAAAIAPH/AQAAAAAAAAAIAPL/AQAAAAAAAAAIAPP/AQAAAAAAAAAIAPT/AQAAAAAAAAAJAO//AQAAAAAAAAAJAPD/AQAAAAAAAAAJAPH/AQAAAAAAAAAJAPL/AQAAAAAAAAAJAPP/AQAAAAAAAAAJAPT/AQAAAAAAAAAKAO//AQAAAAAAAAAKAPD/AQAAAAAAAAAKAPH/AQAAAAAAAAAKAPL/AQAAAAAAAAAKAPP/AQAAAAAAAAAKAPT/AQAAAAAAAAD1//X/AQAAAAAAAAD1//b/AQAAAAAAAAD1//f/AQAAAAAAAAD1//j/AQAAAAAAAAD1//n/AQAAAAAAAAD1//r/AQAAAAAAAAD1//v/AQAAAAAAAAD1//z/AQAAAAAAAAD1//3/AQAAAAAAAAD1//7/AQAAAAAAAAD1////AQAAAAAAAAD1/wAAAQAAAAAAAAD1/wEAAQAAAAAAAAD1/wIAAQAAAAAAAAD1/wMAAQAAAAAAAAD1/wQAAQAAAAAAAAD1/wUAAQAAAAAAAAD1/wYAAQAAAAAAAAD1/+//AQAAAAAAAAD1//D/AQAAAAAAAAD1//H/AQAAAAAAAAD1//L/AQAAAAAAAAD1//P/AQAAAAAAAAD1//T/AQAAAAAAAAD2/+//AQAAAAAAAAD2//D/AQAAAAAAAAD2//H/AQAAAAAAAAD2//L/AQAAAAAAAAD2//P/AQAAAAAAAAD2//T/AQAAAAAAAAD3/+//AQAAAAAAAAD3//D/AQAAAAAAAAD3//H/AQAAAAAAAAD3//L/AQAAAAAAAAD3//P/AQAAAAAAAAD3//T/AQAAAAAAAAD4/wAAAQAAAAAAAAD4/wEAAQAAAAAAAAD4/wIAAQAAAAAAAAD4/wMAAQAAAAAAAAD5/wAAAQAAAAAAAAD5/wEAAQAAAAAAAAD5/wIAAQAAAAAAAAD5/wMAAQAAAAAAAAD5/wQAAQAAAAAAAAACAAMAAQABAAAAAAADAAMAAQABAAAAAAAEAAMAAQABAAAAAAAFAAIAAQABAAAAAAAGAAIAAQABAAAAAAAHAAIAAQABAAAAAAAFAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAACAAAAAQACAAAAAAADAAAAAQACAAAAAAAEAAAAAQACAAAAAAD9////AQACAAAAAAD+////AQACAAAAAAD7//3/AQACAAAAAAABAPz/AQACAAAAAAACAPz/AQACAAAAAAADAPz/AQACAAAAAAAFAPr/AQACAAAAAAAGAPr/AQACAAAAAAAHAPr/AQACAAAAAAD8////AQACAAAAAAD6//3/AQACAAAAAAD8//3/AQACAAAAAAD4//7/AQADAAAAAAD5////AQADAAAAAAD4////AQAEAAAAAAD1/+L/AQAAAAAAAAD1/+P/AQAAAAAAAAD1/+T/AQAAAAAAAAD1/+X/AQAAAAAAAAD1/+b/AQAAAAAAAAD1/+f/AQAAAAAAAAD1/+j/AQAAAAAAAAD1/+n/AQAAAAAAAAD1/+r/AQAAAAAAAAD1/+v/AQAAAAAAAAD1/+z/AQAAAAAAAAD1/+3/AQAAAAAAAAD1/+7/AQAAAAAAAAD2/+L/AQAAAAAAAAD2/+P/AQAAAAAAAAD2/+T/AQAAAAAAAAD2/+X/AQAAAAAAAAD2/+b/AQAAAAAAAAD2/+f/AQAAAAAAAAD2/+j/AQAAAAAAAAD2/+n/AQAAAAAAAAD2/+r/AQAAAAAAAAD2/+v/AQAAAAAAAAD2/+z/AQAAAAAAAAD2/+3/AQAAAAAAAAD2/+7/AQAAAAAAAAD3/+L/AQAAAAAAAAD3/+P/AQAAAAAAAAD3/+T/AQAAAAAAAAD3/+X/AQAAAAAAAAD3/+b/AQAAAAAAAAD3/+f/AQAAAAAAAAD3/+j/AQAAAAAAAAD3/+n/AQAAAAAAAAD3/+r/AQAAAAAAAAD3/+v/AQAAAAAAAAD3/+z/AQAAAAAAAAD3/+3/AQAAAAAAAAD3/+7/AQAAAAAAAAAIANz/AQAAAAAAAAAIAN3/AQAAAAAAAAAIAN7/AQAAAAAAAAAIAN//AQAAAAAAAAAIAOD/AQAAAAAAAAAIAOH/AQAAAAAAAAAIAOL/AQAAAAAAAAAIAOP/AQAAAAAAAAAIAOT/AQAAAAAAAAAIAOX/AQAAAAAAAAAIAOb/AQAAAAAAAAAIAOf/AQAAAAAAAAAIAOj/AQAAAAAAAAAIAOn/AQAAAAAAAAAIAOr/AQAAAAAAAAAIAOv/AQAAAAAAAAAIAOz/AQAAAAAAAAAIAO3/AQAAAAAAAAAIAO7/AQAAAAAAAAAJANz/AQAAAAAAAAAJAN3/AQAAAAAAAAAJAN7/AQAAAAAAAAAJAN//AQAAAAAAAAAJAOD/AQAAAAAAAAAJAOH/AQAAAAAAAAAJAOL/AQAAAAAAAAAJAOP/AQAAAAAAAAAJAOT/AQAAAAAAAAAJAOX/AQAAAAAAAAAJAOb/AQAAAAAAAAAJAOf/AQAAAAAAAAAJAOj/AQAAAAAAAAAJAOn/AQAAAAAAAAAJAOr/AQAAAAAAAAAJAOv/AQAAAAAAAAAJAOz/AQAAAAAAAAAJAO3/AQAAAAAAAAAJAO7/AQAAAAAAAAAKANz/AQAAAAAAAAAKAN3/AQAAAAAAAAAKAN7/AQAAAAAAAAAKAN//AQAAAAAAAAAKAOD/AQAAAAAAAAAKAOH/AQAAAAAAAAAKAOL/AQAAAAAAAAAKAOP/AQAAAAAAAAAKAOT/AQAAAAAAAAAKAOX/AQAAAAAAAAAKAOb/AQAAAAAAAAAKAOf/AQAAAAAAAAAKAOj/AQAAAAAAAAAKAOn/AQAAAAAAAAAKAOr/AQAAAAAAAAAKAOv/AQAAAAAAAAAKAOz/AQAAAAAAAAAKAO3/AQAAAAAAAAAKAO7/AQAAAAAAAAD1/9H/AQAAAAAAAAD1/9L/AQAAAAAAAAD1/9P/AQAAAAAAAAD1/9T/AQAAAAAAAAD1/9X/AQAAAAAAAAD1/9b/AQAAAAAAAAD1/9f/AQAAAAAAAAD1/9j/AQAAAAAAAAD1/9n/AQAAAAAAAAD1/9r/AQAAAAAAAAD1/9v/AQAAAAAAAAD1/9z/AQAAAAAAAAD1/93/AQAAAAAAAAD1/97/AQAAAAAAAAD1/9//AQAAAAAAAAD1/+D/AQAAAAAAAAD1/+H/AQAAAAAAAAD2/9H/AQAAAAAAAAD2/9L/AQAAAAAAAAD2/9P/AQAAAAAAAAD2/9T/AQAAAAAAAAD2/9X/AQAAAAAAAAD2/9b/AQAAAAAAAAD2/9f/AQAAAAAAAAD2/9j/AQAAAAAAAAD2/9n/AQAAAAAAAAD2/9r/AQAAAAAAAAD2/9v/AQAAAAAAAAD2/9z/AQAAAAAAAAD2/93/AQAAAAAAAAD2/97/AQAAAAAAAAD2/9//AQAAAAAAAAD2/+D/AQAAAAAAAAD2/+H/AQAAAAAAAAD3/9H/AQAAAAAAAAD3/9L/AQAAAAAAAAD3/9P/AQAAAAAAAAD3/9T/AQAAAAAAAAD3/9X/AQAAAAAAAAD3/9b/AQAAAAAAAAD3/9f/AQAAAAAAAAD3/9j/AQAAAAAAAAD3/9n/AQAAAAAAAAD3/9r/AQAAAAAAAAD3/9v/AQAAAAAAAAD3/9z/AQAAAAAAAAD3/93/AQAAAAAAAAD3/97/AQAAAAAAAAD3/9//AQAAAAAAAAD3/+D/AQAAAAAAAAD3/+H/AQAAAAAAAAAIAM3/AQAAAAAAAAAIAM7/AQAAAAAAAAAIAM//AQAAAAAAAAAIAND/AQAAAAAAAAAIANH/AQAAAAAAAAAIANL/AQAAAAAAAAAIANP/AQAAAAAAAAAIANT/AQAAAAAAAAAIANX/AQAAAAAAAAAIANb/AQAAAAAAAAAIANf/AQAAAAAAAAAIANj/AQAAAAAAAAAIANn/AQAAAAAAAAAIANr/AQAAAAAAAAAIANv/AQAAAAAAAAAJAM3/AQAAAAAAAAAJAM7/AQAAAAAAAAAJAM//AQAAAAAAAAAJAND/AQAAAAAAAAAJANH/AQAAAAAAAAAJANL/AQAAAAAAAAAJANP/AQAAAAAAAAAJANT/AQAAAAAAAAAJANX/AQAAAAAAAAAJANb/AQAAAAAAAAAJANf/AQAAAAAAAAAJANj/AQAAAAAAAAAJANn/AQAAAAAAAAAJANr/AQAAAAAAAAAJANv/AQAAAAAAAAAKAM3/AQAAAAAAAAAKAM7/AQAAAAAAAAAKAM//AQAAAAAAAAAKAND/AQAAAAAAAAAKANH/AQAAAAAAAAAKANL/AQAAAAAAAAAKANP/AQAAAAAAAAAKANT/AQAAAAAAAAAKANX/AQAAAAAAAAAKANb/AQAAAAAAAAAKANf/AQAAAAAAAAAKANj/AQAAAAAAAAAKANn/AQAAAAAAAAAKANr/AQAAAAAAAAAKANv/AQAAAAAAAAD1/8f/AQAAAAAAAAD1/8j/AQAAAAAAAAD1/8n/AQAAAAAAAAD1/8r/AQAAAAAAAAD1/8v/AQAAAAAAAAD1/8z/AQAAAAAAAAD1/83/AQAAAAAAAAD1/87/AQAAAAAAAAD1/8//AQAAAAAAAAD1/9D/AQAAAAAAAAD2/8f/AQAAAAAAAAD2/8j/AQAAAAAAAAD2/8n/AQAAAAAAAAD2/8r/AQAAAAAAAAD2/8v/AQAAAAAAAAD2/8z/AQAAAAAAAAD2/83/AQAAAAAAAAD2/87/AQAAAAAAAAD2/8//AQAAAAAAAAD2/9D/AQAAAAAAAAD3/8f/AQAAAAAAAAD3/8j/AQAAAAAAAAD3/8n/AQAAAAAAAAD3/8r/AQAAAAAAAAD3/8v/AQAAAAAAAAD3/8z/AQAAAAAAAAD3/83/AQAAAAAAAAD3/87/AQAAAAAAAAD3/8//AQAAAAAAAAD3/9D/AQAAAAAAAAAIAMf/AQAAAAAAAAAIAMj/AQAAAAAAAAAIAMn/AQAAAAAAAAAIAMr/AQAAAAAAAAAIAMv/AQAAAAAAAAAIAMz/AQAAAAAAAAAJAMf/AQAAAAAAAAAJAMj/AQAAAAAAAAAJAMn/AQAAAAAAAAAJAMr/AQAAAAAAAAAJAMv/AQAAAAAAAAAJAMz/AQAAAAAAAAAKAMf/AQAAAAAAAAAKAMj/AQAAAAAAAAAKAMn/AQAAAAAAAAAKAMr/AQAAAAAAAAAKAMv/AQAAAAAAAAAKAMz/AQAAAAAAAAD6//f/AQACAAAAAAD7//f/AQACAAAAAAD///j/AQACAAAAAAAAAPj/AQACAAAAAAABAPj/AQACAAAAAAD///X/AQACAAAAAAAAAPX/AQACAAAAAAABAPX/AQACAAAAAAD7/+//AQAAAAAAAAD8/+//AQABAAAAAAD9/+//AQABAAAAAAD6//D/AQAAAAAAAAD7//D/AQAAAAAAAAD8//D/AQAAAAAAAAD9//D/AQAAAAAAAAD6/+//AQAAAAAAAAAEAO//AQAAAAAAAAAFAO//AQAAAAAAAAAEAPD/AQAAAAAAAAAFAPD/AQAAAAAAAAADAO//AQAAAAAAAAADAPD/AQAAAAAAAAACAPP/AQACAAAAAAD+//H/AQACAAAAAAD///H/AQACAAAAAAABAPP/AQACAAAAAAADAPH/AQAAAAAAAAAEAPH/AQAAAAAAAAAFAPH/AQAAAAAAAAD6//H/AQAAAAAAAAD7//H/AQAAAAAAAAD8//H/AQAAAAAAAAD9//H/AQAAAAAAAAD6/+z/AQAAAAAAAAD6/+3/AQAAAAAAAAD6/+7/AQAAAAAAAAD7/+z/AQAAAAAAAAD7/+3/AQAAAAAAAAD7/+7/AQAAAAAAAAD6/+r/AQADAAAAABD6/+v/AQAAAAAAAAD7/+n/AQADAAAAABD7/+r/AQAEAAAAABD7/+v/AQAAAAAAAAD+/+z/AQACAAAAAAD//+z/AQACAAAAAAD8/+n/AQACAAAAAAD9/+n/AQACAAAAAAADAOz/AQAEAAAAAAADAO3/AQAAAAAAAAADAO7/AQAAAAAAAAAEAOz/AQADAAAAAAAEAO3/AQAEAAAAAAAEAO7/AQAAAAAAAAAFAO3/AQADAAAAAAAFAO7/AQAAAAAAAAADAOv/AQADAAAAAAAFAOj/AQACAAAAAAAEAOj/AQACAAAAAAACAOr/AQAFAAAAAAACAOv/AQAGAAAAAAAHAOb/AQACAAAAAAAFAOT/AQACAAAAAAAEAOT/AQACAAAAAAA=")
tile_set = ExtResource("1_eljrm")

[node name="Player" parent="." instance=ExtResource("4_ca72k")]
position = Vector2(47, -104)

[node name="Camera holder" type="Node2D" parent="."]
visible = false
script = ExtResource("5_jyary")

[node name="Level_1_Camera" type="Camera2D" parent="Camera holder"]
zoom = Vector2(4, 4)

[node name="Level_1_area" type="Area2D" parent="Camera holder/Level_1_Camera"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera holder/Level_1_Camera/Level_1_area"]
shape = SubResource("RectangleShape2D_isfhc")

[node name="Level_2_Camera" type="Camera2D" parent="Camera holder"]
position = Vector2(0, -246)
enabled = false
zoom = Vector2(4, 4)

[node name="Level_2_area" type="Area2D" parent="Camera holder/Level_2_Camera"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera holder/Level_2_Camera/Level_2_area"]
shape = SubResource("RectangleShape2D_isfhc")

[node name="Level_3_Camera" type="Camera2D" parent="Camera holder"]
position = Vector2(0, -492)
enabled = false
zoom = Vector2(4, 4)

[node name="Level_3_area" type="Area2D" parent="Camera holder/Level_3_Camera"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera holder/Level_3_Camera/Level_3_area"]
shape = SubResource("RectangleShape2D_isfhc")

[node name="Level_4_Camera" type="Camera2D" parent="Camera holder"]
position = Vector2(0, -738)
enabled = false
zoom = Vector2(4, 4)

[node name="Level_4_area" type="Area2D" parent="Camera holder/Level_4_Camera"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera holder/Level_4_Camera/Level_4_area"]
shape = SubResource("RectangleShape2D_isfhc")
